added ian's code from thurs morning to wednesday merged version

--- a/src/ianDataProfiling.ipynb
+++ b/src/ianDataProfiling.ipynb
@@ -69,7 +69,6 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 43,
    "metadata": {},
    "outputs": [
@@ -100,7 +99,6 @@
    "execution_count": 91,
    "metadata": {},
    "outputs": [],
-
    "source": [
     "#Uploading the data dictionary into a dataframe\n",
     "code_dict = pd.read_csv(\"../data/original/companies.csv\")"
@@ -210,6 +208,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -242,13 +241,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-
       "['BRWFDS', 'AOUTBOS', 'MITOSK', 'VIESOF', 'MEUWIR', 'ARMYYY', 'ENCNTH', 'TSSTCH', 'FECLUS', 'TACONT']\n",
       "There are 73688 unique company codes\n"
      ]
@@ -404,7 +401,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-
     "<h3><b>Checking validity for each column and applying the result to the profile table</b></h3>"
    ]
   },
@@ -479,7 +475,6 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
@@ -493,7 +488,6 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -1354,7 +1348,6 @@
   },
   {
    "cell_type": "markdown",
-
    "metadata": {},
    "source": [
     "<h3><b>Put all the invalid company codes into a dataframe</b><h3>"
@@ -2028,6 +2021,212 @@
    "metadata": {},
    "source": [
     "To conclude, we found that the DNA data set includes 35 different variables with 1942855 entries. 4.5% of those entries were missing an actual value. Additionally, we tested seven variables for validity. The validation criteria depended uniquely on the variable. Overall, we found __ % of the entire data set to pass all of our validity checks. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### IAN's code from thursday morning "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df[['company_codes', 'Non-duplicates']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = []\n",
+    "for code in x['company_codes'].str.split(\",\"):\n",
+    "    for code2 in code:\n",
+    "        my_list.append(code2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_freq = pd.DataFrame()\n",
+    "company_code = np.array([])\n",
+    "company_count = np.array([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for company, count in Counter(my_list).items():\n",
+    "    company_code = np.append(company_code, company)\n",
+    "    company_count = np.append(company_count, count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_freq['Code'] = company_code\n",
+    "company_freq['Count'] = company_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_freq = company_freq.sort_values(\"Count\", ascending = False).iloc[1:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_freq.set_index(\"Code\", inplace = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "company_freq.Count.head(15).plot(kind = 'bar')\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.title(\"Top 15 Most Mentioned Companines\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Made a csv of all companies with their frequency counts\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_freq.to_csv(\"../data/working/companyfrequency.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_freq.reset_index(inplace = True)\n",
+    "# Made a csv of all companies with their frequency counts and \n",
+    "# corresponding company names(invalid companies will have NaN)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = np.array([])\n",
+    "val = pd.read_csv(\"../data/working/validcompaniesdictionary.csv\", index_col = [0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "company_freq['Code'] = company_freq['Code'].str.upper()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Merging the valid company codes df with the company_freq df. This will match each company with their name, unless invalid\n",
+    "merged_df = pd.merge(val, company_freq, left_on = \"Code\", right_on = \"Code\", how = \"outer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.to_csv(\"../data/working/companyfrequencyandname.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final = pd.read_csv(\"../data/working/companyfrequencyandname.csv\", index_col = [0])\n",
+    "final.head(20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final[final.Code == 'PFIZ']\n"
    ]
   }
  ],
