--- a/src/BERT/BertTraining.ipynb
+++ b/src/BERT/BertTraining.ipynb
@@ -356,253 +356,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[['Dr',\n",
-       "   '.',\n",
-       "   'Curiel',\n",
-       "   'is',\n",
-       "   'the',\n",
-       "   'leader',\n",
+       "[[['The',\n",
+       "   'international',\n",
+       "   'trademark',\n",
+       "   'goods',\n",
+       "   'and',\n",
+       "   'services',\n",
+       "   'class',\n",
+       "   'code',\n",
        "   'for',\n",
-       "   'TumAdoR',\n",
-       "   'Project',\n",
-       "   '6',\n",
-       "   ',',\n",
-       "   'funded',\n",
-       "   'at',\n",
-       "   '$',\n",
-       "   '800',\n",
-       "   ',',\n",
-       "   '000',\n",
-       "   '.',\n",
-       "   'His',\n",
-       "   \"team's\",\n",
-       "   'mission',\n",
+       "   'this',\n",
+       "   'trademark',\n",
+       "   'application',\n",
        "   'is',\n",
-       "   'to',\n",
-       "   'develop',\n",
-       "   'mice',\n",
-       "   'with',\n",
-       "   'human',\n",
-       "   'immune',\n",
-       "   'systems',\n",
-       "   'and',\n",
-       "   'other',\n",
-       "   'models',\n",
-       "   'and',\n",
-       "   'additional',\n",
-       "   'tests',\n",
-       "   'to',\n",
-       "   'be',\n",
-       "   'sure',\n",
-       "   'that',\n",
+       "   '005',\n",
+       "   '.',\n",
+       "   '\\n',\n",
+       "   '\\n',\n",
+       "   'As',\n",
+       "   'submitted',\n",
+       "   'by',\n",
        "   'the',\n",
-       "   'developed',\n",
-       "   'antibody',\n",
-       "   'can',\n",
-       "   'block',\n",
-       "   'the',\n",
-       "   'metabolic',\n",
-       "   'pathway',\n",
+       "   'applicant',\n",
        "   ',',\n",
-       "   'and',\n",
+       "   'this',\n",
+       "   'trademark',\n",
+       "   'application',\n",
+       "   'relates',\n",
        "   'to',\n",
-       "   'assess',\n",
-       "   'what',\n",
        "   'the',\n",
-       "   'immune',\n",
-       "   'consequences',\n",
-       "   'will',\n",
-       "   'be',\n",
-       "   'in',\n",
-       "   'humans',\n",
+       "   'following',\n",
+       "   'goods',\n",
+       "   'and',\n",
+       "   'services',\n",
+       "   ':',\n",
+       "   'Pharmaceutical',\n",
+       "   'preparations',\n",
+       "   'for',\n",
+       "   'human',\n",
+       "   'use',\n",
        "   '.',\n",
        "   '\\n',\n",
        "   '\\n',\n",
        "   'The',\n",
-       "   'TumAdoR',\n",
-       "   'project',\n",
-       "   'weaves',\n",
-       "   'together',\n",
-       "   'the',\n",
-       "   'skills',\n",
-       "   'of',\n",
-       "   'seven',\n",
-       "   'different',\n",
-       "   'teams',\n",
-       "   'from',\n",
-       "   'Germany',\n",
-       "   ',',\n",
-       "   'Switzerland',\n",
-       "   ',',\n",
-       "   'France',\n",
-       "   ',',\n",
-       "   'Finland',\n",
-       "   'and',\n",
-       "   'the',\n",
-       "   'UT',\n",
-       "   'Health',\n",
-       "   'Science',\n",
-       "   'Center',\n",
-       "   'to',\n",
-       "   'attack',\n",
-       "   'the',\n",
-       "   'problem',\n",
-       "   'from',\n",
-       "   'multiple',\n",
-       "   'perspectives',\n",
-       "   'such',\n",
-       "   'as',\n",
-       "   'immunology',\n",
-       "   ',',\n",
-       "   'drug',\n",
-       "   'development',\n",
-       "   ',',\n",
-       "   'and',\n",
-       "   'clinical',\n",
-       "   'trial',\n",
-       "   'design',\n",
-       "   'and',\n",
-       "   'management',\n",
-       "   '.',\n",
-       "   '\\n',\n",
-       "   '\\n',\n",
-       "   'Its',\n",
-       "   'target',\n",
-       "   'is',\n",
-       "   'CD73',\n",
-       "   ',',\n",
-       "   'an',\n",
-       "   'enzyme',\n",
-       "   'that',\n",
-       "   'is',\n",
-       "   'overexpressed',\n",
-       "   'in',\n",
-       "   'many',\n",
-       "   'different',\n",
-       "   'kinds',\n",
-       "   'of',\n",
-       "   'cancer',\n",
-       "   '.',\n",
-       "   'CD73',\n",
-       "   'helps',\n",
-       "   'produce',\n",
-       "   'excess',\n",
-       "   'amounts',\n",
-       "   'of',\n",
-       "   'adenosine',\n",
-       "   ',',\n",
-       "   'which',\n",
-       "   'is',\n",
-       "   'needed',\n",
-       "   'to',\n",
-       "   'produce',\n",
-       "   'energy',\n",
-       "   'in',\n",
-       "   'cells',\n",
-       "   ',',\n",
-       "   'but',\n",
-       "   'also',\n",
-       "   'can',\n",
-       "   'suppress',\n",
-       "   'the',\n",
-       "   'immune',\n",
-       "   'system',\n",
-       "   'and',\n",
-       "   'allow',\n",
-       "   'the',\n",
-       "   'tumor',\n",
-       "   'cells',\n",
-       "   'to',\n",
-       "   'reproduce',\n",
-       "   '.',\n",
-       "   '\\n',\n",
-       "   '\\n',\n",
-       "   'Adenosine',\n",
-       "   'is',\n",
-       "   'not',\n",
-       "   'normally',\n",
-       "   'immune',\n",
-       "   '-',\n",
-       "   'suppressive',\n",
-       "   ',',\n",
-       "   '\"',\n",
-       "   'but',\n",
-       "   'it',\n",
-       "   'is',\n",
-       "   'when',\n",
-       "   'you',\n",
-       "   'generate',\n",
-       "   'lots',\n",
-       "   'of',\n",
-       "   'it',\n",
-       "   ',',\n",
-       "   'as',\n",
-       "   'tumors',\n",
-       "   'do',\n",
-       "   '.',\n",
-       "   'Tumors',\n",
-       "   'do',\n",
-       "   'everything',\n",
-       "   'in',\n",
-       "   'a',\n",
-       "   'crazy',\n",
-       "   'way',\n",
-       "   ',',\n",
-       "   '\"',\n",
-       "   'Dr',\n",
-       "   '.',\n",
-       "   'Curiel',\n",
-       "   'said',\n",
-       "   '.',\n",
-       "   '\\n',\n",
-       "   '\\n',\n",
-       "   'Antibody',\n",
-       "   'therapy',\n",
-       "   'is',\n",
-       "   'already',\n",
-       "   'a',\n",
-       "   'proven',\n",
-       "   'success',\n",
-       "   '-',\n",
-       "   'one',\n",
-       "   'example',\n",
-       "   'is',\n",
-       "   'Herceptin',\n",
-       "   ',',\n",
-       "   'an',\n",
-       "   'antibody',\n",
-       "   'drug',\n",
-       "   'used',\n",
-       "   'to',\n",
-       "   'treat',\n",
-       "   'breast',\n",
-       "   'cancer',\n",
-       "   '-',\n",
-       "   'but',\n",
-       "   'the',\n",
-       "   'promising',\n",
-       "   'thing',\n",
-       "   'about',\n",
+       "   'owner',\n",
+       "   '/',\n",
+       "   'registrar',\n",
+       "   'information',\n",
+       "   'for',\n",
        "   'this',\n",
-       "   'project',\n",
+       "   'application',\n",
        "   'is',\n",
-       "   'that',\n",
-       "   'the',\n",
-       "   'drug',\n",
-       "   'may',\n",
-       "   'well',\n",
-       "   'work',\n",
-       "   'against',\n",
-       "   'several',\n",
-       "   'types',\n",
-       "   'of',\n",
-       "   'cancer',\n",
+       "   ':',\n",
+       "   'Marilyn',\n",
+       "   'F',\n",
+       "   '.',\n",
+       "   'Kelly',\n",
+       "   ',',\n",
+       "   'Bristol',\n",
+       "   '-',\n",
+       "   'Myers',\n",
+       "   'Squibb',\n",
+       "   ',',\n",
+       "   'P',\n",
+       "   '.',\n",
+       "   'o',\n",
+       "   '.',\n",
+       "   'Box',\n",
+       "   '4000',\n",
+       "   ',',\n",
+       "   'Trademarks',\n",
+       "   'Dept',\n",
+       "   '.',\n",
+       "   ',',\n",
+       "   'Mailstop',\n",
+       "   'B22',\n",
+       "   '-',\n",
+       "   '02',\n",
+       "   ',',\n",
+       "   'Princeton',\n",
+       "   ',',\n",
+       "   'NJ',\n",
+       "   '08648',\n",
+       "   '-',\n",
+       "   '4000',\n",
        "   '.',\n",
        "   '\\n',\n",
        "   '\\n',\n",
@@ -613,40 +456,19 @@
        "   'article',\n",
        "   'include',\n",
        "   ':',\n",
-       "   'Antibodies',\n",
+       "   'Trademarks',\n",
        "   ',',\n",
-       "   'Cancer',\n",
+       "   'Biotechnology',\n",
+       "   'Companies',\n",
        "   ',',\n",
-       "   'Therapy',\n",
+       "   'Biopharmaceutical',\n",
+       "   'Companies',\n",
        "   ',',\n",
-       "   'Oncology',\n",
-       "   ',',\n",
-       "   'Immunology',\n",
-       "   ',',\n",
-       "   'Blood',\n",
-       "   'Proteins',\n",
-       "   ',',\n",
-       "   'Immunoglobulins',\n",
-       "   ',',\n",
-       "   'Hemic',\n",
-       "   'and',\n",
-       "   'Immune',\n",
-       "   'Systems',\n",
-       "   ',',\n",
-       "   'Clinical',\n",
-       "   'Trials',\n",
-       "   'and',\n",
-       "   'Studies',\n",
-       "   ',',\n",
-       "   'University',\n",
-       "   'of',\n",
-       "   'Texas',\n",
-       "   'Health',\n",
-       "   'Science',\n",
-       "   'Center',\n",
-       "   'at',\n",
-       "   'San',\n",
-       "   'Antonio',\n",
+       "   'Bristol',\n",
+       "   '-',\n",
+       "   'Myers',\n",
+       "   'Squibb',\n",
+       "   'Company',\n",
        "   '.',\n",
        "   '\\n',\n",
        "   '\\n',\n",
@@ -667,155 +489,12 @@
        "   'world',\n",
        "   '.',\n",
        "   'Copyright',\n",
-       "   '2014',\n",
+       "   '2017',\n",
        "   ',',\n",
        "   'NewsRx',\n",
        "   'LLC']],\n",
        " [['O',\n",
        "   'O',\n",
-       "   'B-PERSON',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'B-ORG',\n",
-       "   'I-ORG',\n",
-       "   'I-ORG',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'B-MONEY',\n",
-       "   'I-MONEY',\n",
-       "   'I-MONEY',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'B-ORG',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'B-CARDINAL',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'B-GPE',\n",
-       "   'O',\n",
-       "   'B-GPE',\n",
-       "   'O',\n",
-       "   'B-GPE',\n",
-       "   'O',\n",
-       "   'B-GPE',\n",
-       "   'O',\n",
-       "   'B-ORG',\n",
-       "   'I-ORG',\n",
-       "   'I-ORG',\n",
-       "   'I-ORG',\n",
-       "   'I-ORG',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
        "   'O',\n",
        "   'O',\n",
        "   'O',\n",
@@ -867,14 +546,16 @@
        "   'O',\n",
        "   'O',\n",
        "   'B-PERSON',\n",
+       "   'I-PERSON',\n",
        "   'O',\n",
        "   'O',\n",
        "   'O',\n",
+       "   'B-ORG',\n",
+       "   'I-ORG',\n",
+       "   'I-ORG',\n",
+       "   'I-ORG',\n",
        "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
+       "   'B-GPE',\n",
        "   'O',\n",
        "   'O',\n",
        "   'O',\n",
@@ -882,7 +563,6 @@
        "   'B-CARDINAL',\n",
        "   'O',\n",
        "   'O',\n",
-       "   'B-PRODUCT',\n",
        "   'O',\n",
        "   'O',\n",
        "   'O',\n",
@@ -891,47 +571,9 @@
        "   'O',\n",
        "   'O',\n",
        "   'O',\n",
+       "   'B-GPE',\n",
        "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
-       "   'O',\n",
+       "   'B-GPE',\n",
        "   'O',\n",
        "   'O',\n",
        "   'O',\n",
@@ -949,13 +591,15 @@
        "   'O',\n",
        "   'B-ORG',\n",
        "   'I-ORG',\n",
-       "   'I-ORG',\n",
-       "   'I-ORG',\n",
-       "   'I-ORG',\n",
+       "   'O',\n",
+       "   'B-ORG',\n",
        "   'I-ORG',\n",
        "   'O',\n",
-       "   'B-GPE',\n",
-       "   'I-GPE',\n",
+       "   'B-ORG',\n",
+       "   'I-ORG',\n",
+       "   'I-ORG',\n",
+       "   'I-ORG',\n",
+       "   'I-ORG',\n",
        "   'O',\n",
        "   'O',\n",
        "   'O',\n",
@@ -982,13 +626,13 @@
        "   'I-ORG']]]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ner_model([df.iloc[2]['body']])"
+    "ner_model([df.iloc[4]['body']])"
    ]
   },
   {
