Added a couple examples that will be in presentation

--- a/src/BERT/BertTraining.ipynb
+++ b/src/BERT/BertTraining.ipynb
@@ -27,8 +27,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-07 07:56:42.391 INFO in 'deeppavlov.download'['download'] at line 132: Skipped http://files.deeppavlov.ai/deeppavlov_data/bert/cased_L-12_H-768_A-12.zip download because of matching hashes\n",
-      "2020-07-07 07:56:44.767 INFO in 'deeppavlov.download'['download'] at line 132: Skipped http://files.deeppavlov.ai/deeppavlov_data/ner_ontonotes_bert_v1.tar.gz download because of matching hashes\n",
+      "2020-07-08 07:59:39.629 INFO in 'deeppavlov.download'['download'] at line 132: Skipped http://files.deeppavlov.ai/deeppavlov_data/ner_ontonotes_bert_v1.tar.gz download because of matching hashes\n",
+      "2020-07-08 07:59:47.614 INFO in 'deeppavlov.download'['download'] at line 132: Skipped http://files.deeppavlov.ai/deeppavlov_data/bert/cased_L-12_H-768_A-12.zip download because of matching hashes\n",
       "[nltk_data] Downloading package punkt to /home/itm3f/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package stopwords to /home/itm3f/nltk_data...\n",
@@ -53,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-07 07:56:59.921 INFO in 'deeppavlov.core.data.simple_vocab'['simple_vocab'] at line 115: [loading vocabulary from /sfs/qumulo/qhome/itm3f/.deeppavlov/models/ner_ontonotes_bert/tag.dict]\n"
+      "2020-07-08 08:02:32.281 INFO in 'deeppavlov.core.data.simple_vocab'['simple_vocab'] at line 115: [loading vocabulary from /sfs/qumulo/qhome/itm3f/.deeppavlov/models/ner_ontonotes_bert/tag.dict]\n"
      ]
     },
     {
@@ -128,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-07 07:57:21.399 INFO in 'deeppavlov.core.models.tf_model'['tf_model'] at line 51: [loading model from /sfs/qumulo/qhome/itm3f/.deeppavlov/models/ner_ontonotes_bert/model]\n"
+      "2020-07-08 08:03:32.945 INFO in 'deeppavlov.core.models.tf_model'['tf_model'] at line 51: [loading model from /sfs/qumulo/qhome/itm3f/.deeppavlov/models/ner_ontonotes_bert/model]\n"
      ]
     },
     {
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "ner_model = build_model(configs.ner.ner_ontonotes_bert, download=True)\n"
+    "ner_model = build_model(configs.ner.ner_ontonotes_bert, download=True)"
    ]
   },
   {
@@ -153,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "[[['Bob', 'Ross', 'lived', 'in', 'Florida']],\n",
+       "[[['Bob', 'Ross', 'lived', 'in', 'Miami']],\n",
        " [['B-PERSON', 'I-PERSON', 'O', 'O', 'B-GPE']]]"
       ]
      },
@@ -164,28 +164,37 @@
    ],
    "source": [
     "#O Object\n",
-    "ner_model(['Bob Ross lived in Florida'])"
+    "ner_model(['Bob Ross lived in Miami'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[['Harry', 'Potter', 'is', 'based', 'in', 'London']],\n",
-       " [['B-PERSON', 'I-PERSON', 'O', 'O', 'O', 'B-GPE']]]"
+       "[[['Democrats',\n",
+       "   'built',\n",
+       "   'the',\n",
+       "   'Blue',\n",
+       "   'Bridge',\n",
+       "   'with',\n",
+       "   'the',\n",
+       "   'help',\n",
+       "   'of',\n",
+       "   'McDonalds']],\n",
+       " [['B-NORP', 'O', 'B-FAC', 'I-FAC', 'I-FAC', 'O', 'O', 'O', 'O', 'B-ORG']]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ner_model([\"Harry Potter is based in London\"])"
+    "ner_model([\"Democrats built the Blue Bridge with the help of McDonalds\"])"
    ]
   },
   {
