removed legal entities from ndc

--- a/src/NDCcleaning.ipynb
+++ b/src/NDCcleaning.ipynb
@@ -177,44 +177,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Daniel's Code for Cleaning NDC</h2>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def eraseFromColumn(inputColumn, eraseList):\n",
-    "    \"iteratively delete regex query matches from input list\"\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    inputColumn -- a column from a pandas dataframe, this will be the set of\n",
-    "    target words/entries that deletions will be made from\n",
-    "    eraseList -- a column containing strings (regex expressions) which will be\n",
-    "    deleted from the inputColumn, in an iterative fashion\n",
-    "    \"\"\"\n",
-    "    eraseList['changeNum'] = 0\n",
-    "    eraseList['changeIndexes'] = ''\n",
-    "    \n",
-    "    inputColumn = inputColumn.replace(regex=True, to_replace = \"\\\\\\\\\", value='/')\n",
-    "    \n",
-    "    for index, row in eraseList.iterrows():\n",
-    "        curReplaceVal = row[0]\n",
-    "        currentRegexExpression=re.compile(curReplaceVal)\n",
-    "        CurrentBoolVec=inputColumn.str.contains(currentRegexExpression, na= False)\n",
-    "        eraseList['changeIndexes'].iloc[index]=[i for i, x in enumerate(CurrentBoolVec) if x]\n",
-    "        eraseList['changeNum'].iloc[index] = len(eraseList['changeIndexes'].iloc[index])\n",
-    "        inputColumn.replace(regex=True, to_replace=currentRegexExpression,value='', inplace = True)\n",
-    "    \n",
-    "    return inputColumn, eraseList"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<h2>Cleaning NDC</h2>"
    ]
   },
@@ -572,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -602,44 +564,44 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>'(?i) Inc\\b'</td>\n",
+       "      <td>(?i) Inc\\b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>'(?i) Ltd\\b'</td>\n",
+       "      <td>(?i) Ltd\\b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>'(?i) LLC\\b'</td>\n",
+       "      <td>(?i) LLC\\b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>'(?i) GmbH\\b'</td>\n",
+       "      <td>(?i) GmbH\\b</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>'(?i) Corporation\\b'</td>\n",
+       "      <td>(?i) Corporation\\b</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      0\n",
-       "0          '(?i) Inc\\b'\n",
-       "1          '(?i) Ltd\\b'\n",
-       "2          '(?i) LLC\\b'\n",
-       "3         '(?i) GmbH\\b'\n",
-       "4  '(?i) Corporation\\b'"
+       "                    0\n",
+       "0          (?i) Inc\\b\n",
+       "1          (?i) Ltd\\b\n",
+       "2          (?i) LLC\\b\n",
+       "3         (?i) GmbH\\b\n",
+       "4  (?i) Corporation\\b"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "legalEntities = pd.read_csv(\"https://raw.githubusercontent.com/DSPG-Young-Scholars-Program/dspg20oss/danBranch/ossPy/keyFiles/curatedLegalEntitesRaw.csv\", header = None)\n",
+    "legalEntities = pd.read_csv(\"https://raw.githubusercontent.com/DSPG-Young-Scholars-Program/dspg20oss/danBranch/ossPy/keyFiles/curatedLegalEntitesRaw.csv\", quotechar = \"'\",header = None)\n",
     "legalEntities.head()"
    ]
   },
@@ -655,14 +617,178 @@
    "execution_count": 173,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def eraseFromColumn(inputColumn, eraseList):\n",
+    "    \"iteratively delete regex query matches from input list\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    inputColumn -- a column from a pandas dataframe, this will be the set of\n",
+    "    target words/entries that deletions will be made from\n",
+    "    eraseList -- a column containing strings (regex expressions) which will be\n",
+    "    deleted from the inputColumn, in an iterative fashion\n",
+    "    \"\"\"\n",
+    "    eraseList['changeNum'] = 0\n",
+    "    eraseList['changeIndexes'] = ''\n",
+    "    \n",
+    "    inputColumn = inputColumn.replace(regex=True, to_replace = \"\\\\\\\\\", value='/')\n",
+    "    \n",
+    "    for index, row in eraseList.iterrows():\n",
+    "        curReplaceVal = row[0]\n",
+    "        currentRegexExpression=re.compile(curReplaceVal)\n",
+    "        CurrentBoolVec=inputColumn.str.contains(currentRegexExpression, na= False)\n",
+    "        eraseList['changeIndexes'].iloc[index]=[i for i, x in enumerate(CurrentBoolVec) if x]\n",
+    "        eraseList['changeNum'].iloc[index] = len(eraseList['changeIndexes'].iloc[index])\n",
+    "        inputColumn.replace(regex=True, to_replace=currentRegexExpression,value='', inplace = True)\n",
+    "    \n",
+    "    return inputColumn, eraseList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output, eraseList = eraseFromColumn(ndc.company, legalEntities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This dataframe is lowercased, doesn't have any of the unwanted punctuation, and has removed all legal entity labels\n",
+    "output= pd.DataFrame(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Counting Unique String Tokens using Daniel's code</h4>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "longString = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = pd.DataFrame()\n",
+    "company = np.array(['Toys#R Us', \"*Tesla\", \"<nike>\", \"(Harley)\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['company'] = company"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned = np.array([])\n",
+    "\n",
+    "for row in test.itertuples():\n",
+    "    cleaned = np.append(cleaned, removeUnwantedPunc(row.company))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['cleaned'] = cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company</th>\n",
+       "      <th>cleaned</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toys#R Us</td>\n",
+       "      <td>Toys R Us</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>*Tesla</td>\n",
+       "      <td>Tesla</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>&lt;nike&gt;</td>\n",
+       "      <td>nike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(Harley)</td>\n",
+       "      <td>Harley</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     company    cleaned\n",
+       "0  Toys#R Us  Toys R Us\n",
+       "1     *Tesla      Tesla\n",
+       "2     <nike>      nike \n",
+       "3   (Harley)    Harley "
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
   },
   {
    "cell_type": "code",
