printing results from subset

--- a/src/matching.ipynb
+++ b/src/matching.ipynb
@@ -80,11 +80,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best choice is matching with best choice\n",
+      "Score: 100\n",
+      "\n",
+      "best choice is matching with best sanitizer\n",
+      "Score: 56\n",
+      "\n",
+      "best choice is matching with best sanitizers\n",
+      "Score: 54\n",
+      "\n",
+      "best choice is matching with best sanitizers\n",
+      "Score: 54\n",
+      "\n",
+      "best choice is matching with bestco\n",
+      "Score: 71\n",
+      "\n",
+      "best sanitizer is matching with best choice\n",
+      "Score: 56\n",
+      "\n",
+      "best sanitizer is matching with best sanitizer\n",
+      "Score: 100\n",
+      "\n",
+      "best sanitizer is matching with best sanitizers\n",
+      "Score: 97\n",
+      "\n",
+      "best sanitizer is matching with best sanitizers\n",
+      "Score: 97\n",
+      "\n",
+      "best sanitizer is matching with bestco\n",
+      "Score: 40\n",
+      "\n",
+      "best sanitizers is matching with best choice\n",
+      "Score: 54\n",
+      "\n",
+      "best sanitizers is matching with best sanitizer\n",
+      "Score: 97\n",
+      "\n",
+      "best sanitizers is matching with best sanitizers\n",
+      "Score: 100\n",
+      "\n",
+      "best sanitizers is matching with best sanitizers\n",
+      "Score: 100\n",
+      "\n",
+      "best sanitizers is matching with bestco\n",
+      "Score: 38\n",
+      "\n",
+      "best sanitizers is matching with best choice\n",
+      "Score: 54\n",
+      "\n",
+      "best sanitizers is matching with best sanitizer\n",
+      "Score: 97\n",
+      "\n",
+      "best sanitizers is matching with best sanitizers\n",
+      "Score: 100\n",
+      "\n",
+      "best sanitizers is matching with best sanitizers\n",
+      "Score: 100\n",
+      "\n",
+      "best sanitizers is matching with bestco\n",
+      "Score: 38\n",
+      "\n",
+      "bestco is matching with best choice\n",
+      "Score: 71\n",
+      "\n",
+      "bestco is matching with best sanitizer\n",
+      "Score: 40\n",
+      "\n",
+      "bestco is matching with best sanitizers\n",
+      "Score: 38\n",
+      "\n",
+      "bestco is matching with best sanitizers\n",
+      "Score: 38\n",
+      "\n",
+      "bestco is matching with bestco\n",
+      "Score: 100\n",
+      "\n",
+      "[100, 56, 54, 54, 71, 56, 100, 97, 97, 40, 54, 97, 100, 100, 38, 54, 97, 100, 100, 38, 71, 40, 38, 38, 100]\n"
+     ]
+    }
+   ],
    "source": [
-    "#print(matchWithFuzzy(subset.company.tolist(), subset.company.tolist()))"
+    "print(matchWithFuzzy(subset.company.tolist(), subset.company.tolist()))"
    ]
   },
   {
