fixing outputs for df with aggregated company names

--- a/src/fda_square_matching.ipynb
+++ b/src/fda_square_matching.ipynb
@@ -5141,8 +5141,15 @@
     }
    ],
    "source": [
-    "for i in matching.iterrows():\n",
-    "    print(i)"
+    "#for i in matching.iterrows():\n",
+    " #   print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating truncated version of matching"
    ]
   },
   {
@@ -5159,194 +5166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>original company names</th>\n",
-       "      <th>clean company name</th>\n",
-       "      <th>company matches</th>\n",
-       "      <th>fuzz ratio</th>\n",
-       "      <th>fuzz partial ratio</th>\n",
-       "      <th>original row number</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3D IMAGING DRUG</td>\n",
-       "      <td>d imaging drug</td>\n",
-       "      <td>['d imaging drug']</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3M</td>\n",
-       "      <td>m</td>\n",
-       "      <td>['m']</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3M DRUG DELIVERY</td>\n",
-       "      <td>m drug delivery</td>\n",
-       "      <td>['m drug delivery']</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AAIPHARMA LLC</td>\n",
-       "      <td>aaipharma</td>\n",
-       "      <td>['aaipharma']</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ABBOTT LABS</td>\n",
-       "      <td>abbott</td>\n",
-       "      <td>['abbott']</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>[100]</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>ABBVIE</td>\n",
-       "      <td>abbvie</td>\n",
-       "      <td>['abbvie', 'abbvie']</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>ABBVIE ENDOCRINE</td>\n",
-       "      <td>abbvie endocrine</td>\n",
-       "      <td>['abbvie endocrine', 'abbvie endocrine']</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>ABBVIE ENDOCRINE INC</td>\n",
-       "      <td>abbvie endocrine</td>\n",
-       "      <td>['abbvie endocrine', 'abbvie endocrine']</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>ABBVIE INC</td>\n",
-       "      <td>abbvie</td>\n",
-       "      <td>['abbvie', 'abbvie']</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>ABHAI INC</td>\n",
-       "      <td>abhai</td>\n",
-       "      <td>['abhai', 'abhai']</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>[100, 100]</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  original company names clean company name  \\\n",
-       "0        3D IMAGING DRUG     d imaging drug   \n",
-       "1                     3M                  m   \n",
-       "2       3M DRUG DELIVERY    m drug delivery   \n",
-       "3          AAIPHARMA LLC          aaipharma   \n",
-       "4            ABBOTT LABS             abbott   \n",
-       "5                 ABBVIE             abbvie   \n",
-       "6       ABBVIE ENDOCRINE   abbvie endocrine   \n",
-       "7   ABBVIE ENDOCRINE INC   abbvie endocrine   \n",
-       "8             ABBVIE INC             abbvie   \n",
-       "9              ABHAI INC              abhai   \n",
-       "\n",
-       "                            company matches  fuzz ratio fuzz partial ratio  \\\n",
-       "0                        ['d imaging drug']       [100]              [100]   \n",
-       "1                                     ['m']       [100]              [100]   \n",
-       "2                       ['m drug delivery']       [100]              [100]   \n",
-       "3                             ['aaipharma']       [100]              [100]   \n",
-       "4                                ['abbott']       [100]              [100]   \n",
-       "5                      ['abbvie', 'abbvie']  [100, 100]         [100, 100]   \n",
-       "6  ['abbvie endocrine', 'abbvie endocrine']  [100, 100]         [100, 100]   \n",
-       "7  ['abbvie endocrine', 'abbvie endocrine']  [100, 100]         [100, 100]   \n",
-       "8                      ['abbvie', 'abbvie']  [100, 100]         [100, 100]   \n",
-       "9                        ['abhai', 'abhai']  [100, 100]         [100, 100]   \n",
-       "\n",
-       "   original row number  \n",
-       "0                    0  \n",
-       "1                    1  \n",
-       "2                    2  \n",
-       "3                    3  \n",
-       "4                    4  \n",
-       "5                    5  \n",
-       "6                    6  \n",
-       "7                    7  \n",
-       "8                    8  \n",
-       "9                    9  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matching[0:10]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Creating truncated version of matching"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#group by clean company name, append the original company names to list \n",
+    "#group by clean company name, append the original company names, row numbers and ratio value to new colum\n",
     "unique_comp = matching.groupby('clean company name', as_index = False).agg({'original company names': ', '.join, \n",
     "                                                                            'original row number': ', '.join,\n",
     "                                                                            'company matches': ', '.join,\n",
